--- a/src/main/resources/zenit/console/ConsolePane.fxml
+++ b/src/main/resources/zenit/console/ConsolePane.fxml
@@ -7,12 +7,13 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
+<?import org.kordamp.ikonli.javafx.FontIcon?>
 
 <AnchorPane id="rootNode" fx:id="rootNode" prefHeight="300.0" prefWidth="700.0" style="-fx-background-color: #333;" stylesheets="@consoleStyle.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.java.zenit.console.ConsoleController">
    <children>
       <AnchorPane fx:id="rootAnchor" layoutY="33.0" prefHeight="300.0" prefWidth="700.0" style="-fx-background-color:#444" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="32.0">
          <children>
-            <Text layoutX="291.0" layoutY="41.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nothing to display." textAlignment="CENTER" AnchorPane.topAnchor="30.0">
+            <Text layoutX="291.0" layoutY="41.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" AnchorPane.topAnchor="30.0">
                <font>
                   <Font size="14.0" />
                </font>
@@ -32,11 +33,11 @@
                   <Cursor fx:constant="HAND" />
                </cursor>
             </Button>
-            <ChoiceBox fx:id="consoleChoiceBox" nodeOrientation="LEFT_TO_RIGHT" prefHeight="27.0" prefWidth="100.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <ChoiceBox fx:id="consoleChoiceBox" layoutX="530.0" layoutY="4.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="27.0" prefWidth="100.0" AnchorPane.rightAnchor="90.0" AnchorPane.topAnchor="4.0">
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor></ChoiceBox>
-            <ChoiceBox fx:id="terminalChoiceBox" nodeOrientation="LEFT_TO_RIGHT" prefHeight="27.0" prefWidth="100.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <ChoiceBox fx:id="terminalChoiceBox" layoutX="530.0" layoutY="4.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="27.0" prefWidth="100.0" AnchorPane.rightAnchor="90.0" AnchorPane.topAnchor="4.0">
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor></ChoiceBox>
@@ -48,13 +49,37 @@
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor></Button>
-            <Button id="btn" fx:id="btnClearConsole" layoutX="500.0" layoutY="4.0" mnemonicParsing="false" onMouseClicked="#clearConsole" stylesheets="@consoleStyle.css" text="CLEAR" textFill="#666666" AnchorPane.rightAnchor="158.4">
+            <Button id="btn" fx:id="btnClearConsole" layoutX="444.0" layoutY="6.0" mnemonicParsing="false" onMouseClicked="#clearConsole" stylesheets="@consoleStyle.css" text="CLEAR" textFill="#666666" AnchorPane.rightAnchor="204.39999999999998">
                <opaqueInsets>
                   <Insets />
                </opaqueInsets>
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor></Button>
+            <Button id="btn" fx:id="btnClose" layoutX="676.0" layoutY="4.0" mnemonicParsing="false" style="-fx-font-size:14px;" stylesheets="@consoleStyle.css" text="X" AnchorPane.rightAnchor="0.0">
+	           	<cursor>
+                  <Cursor fx:constant="HAND" /> 
+               </cursor>
+	        </Button>
+	        <FontIcon  fx:id="iconCloseConsoleInstance" layoutX="6.0" layoutY="22.0" AnchorPane.rightAnchor="35.0" 
+	        	iconLiteral="fa-trash" iconColor="#666" iconSize="17">
+				<cursor>
+                  <Cursor fx:constant="HAND" /> 
+               </cursor>
+            </FontIcon>
+            <FontIcon  fx:id="iconCloseTerminalInstance" layoutX="6.0" layoutY="22.0" AnchorPane.rightAnchor="35.0" 
+	        	iconLiteral="fa-trash" iconColor="#666" iconSize="17">
+				<cursor>
+                  <Cursor fx:constant="HAND" /> 
+               </cursor>
+            </FontIcon>
+            <FontIcon  fx:id="iconTerminateProcess" layoutX="6.0" layoutY="22.0" AnchorPane.rightAnchor="65.0" 
+	        	iconLiteral="fa-stop" iconColor="#666" iconSize="14">
+				<cursor>
+                  <Cursor fx:constant="HAND" /> 
+               </cursor>
+            </FontIcon>
+	        
          </children>
       </AnchorPane>
    </children>
