Custom Theme working
Custom Theme is working, sort of, for now.

--- a/customtheme/mainCustomTheme.css
+++ b/customtheme/mainCustomTheme.css
@@ -38,32 +38,32 @@
 }
 
 #menuBar, #menuBar * {
-	-fx-background-color: #333333;
-	-fx-text-fill: #FFFF80;
+	-fx-background-color: #008000;
+	-fx-text-fill: #B31A1A;
 }
 
 #menuBar .arrow {
-	-fx-background-color: #FFFF80;
+	-fx-background-color: #B31A1A;
 }
 
 .menu-item:hover, .menu-item:hover > * {
-	-fx-background-color: #666666 !important;
+	-fx-background-color: #CCCC66 !important;
 }
 
 .menu {
-	-fx-fill: #FFFF80;
+	-fx-fill: #B31A1A;
 }
 
 .menu:hover, .menu:hover > .label {
-	-fx-background-color: #666666 !important;
+	-fx-background-color: #CCCC66 !important;
 }
 
 #cmiDarkMode:focused:checked > .left-container > .check {
-    -fx-background-color: #FFFF80;
+    -fx-background-color: #B31A1A;
 }
 
 #cmiDarkMode:hover > .left-container {
-	-fx-background-color: #666666 !important;
+	-fx-background-color: #CCCC66 !important;
 }
 
 #splitPane {
@@ -78,8 +78,8 @@
 }
 
 #tabPane {
-	-fx-background-color: #333333;
-	-fx-fill: #FFFF80;
+	-fx-background-color: #008000;
+	-fx-fill: #B31A1A;
 	-fx-border-width: 0;
 	-fx-padding: 0;
 }
@@ -90,19 +90,19 @@
 }
 
 #treeView * {
-	-fx-background-color: #333333;
-	-fx-fill: #FFFF80aa;
+	-fx-background-color: #008000;
+	-fx-fill: #B31A1Aaa;
 }
 
 #treeView .arrow  {
-	-fx-background-color: #FFFF80bb;
+	-fx-background-color: #B31A1Abb;
 }
 
 .split-pane:horizontal > .split-pane-divider {
-   -fx-background-color: #1e1e1e;
+   -fx-background-color: #CCCC66;
 }
 .split-pane:vertical > .split-pane-divider {
-   -fx-background-color: #1e1e1e;
+   -fx-background-color: #CCCC66;
 }
 
 .split-pane > .split-pane-divider {  
@@ -122,15 +122,15 @@
  
  
  .tree-cell:hover {
-	-fx-background-color: #ff0000;
+	-fx-background-color: #008000;
  }
  
  #treeView .thumb {
- 	-fx-background-color: #EEEEEEAA;
+ 	-fx-background-color: #B31A1AEE;
  }
  
  #treeView .thumb:hover, #treeView .thumb:pressed {
- 	-fx-background-color: #EEEEEE;
+ 	-fx-background-color: #B31A1A;
  }
  
  #treeView .increment-button, #treeView .decrement-button {
@@ -155,7 +155,7 @@
 }
 
 #tabPane .tab-header-area .tab-header-background {
-	-fx-background-color: #333333;
+	-fx-background-color: #CCCC66;
 }
 
 #tabPane * {
@@ -163,7 +163,7 @@
 }
 
 #tabPane .tab {
-	-fx-background-color: #33333388;
+	-fx-background-color: #00800088;
 }
 
 #tabPane:focused > .tab-header-area > .headers-region > .tab:selected .focus-indicator {
@@ -171,68 +171,68 @@
 }
 
 #tabPane .tab .tab-label {
-	-fx-text-fill: #FFFF80;
+	-fx-text-fill: #B31A1A;
 }
 
 #tabPane .tab:selected {
-	-fx-background-color: #333333;
+	-fx-background-color: #008000;
 }
 
 #tabPane .tab-content-area * {
-	-fx-background-color: #333333;
+	-fx-background-color: #008000;
 }
 
 #consolePane {
-	-fx-text-fill: #FFFF80;
+	-fx-text-fill: #B31A1A;
 }
 
 #consolePane .title {
-	-fx-background-color: #333333;
-	-fx-text-fill: #FFFF80;
+	-fx-background-color: #CCCC66;
+	-fx-text-fill: #B31A1A;
 	-fx-border-radius: 0;
 }
 
 #consolePane .content {
-	-fx-background-color: #333333;
+	-fx-background-color: #008000;
 	-fx-border-width: 0;
-	-fx-border-color: #333333;
+	-fx-border-color: #008000;
 }
 
 #consolePane .content * {
-	-fx-text-fill: #FFFF80;
-	-fx-fill: #FFFF80;
+	-fx-text-fill: #B31A1A;
+	-fx-fill: #B31A1A;
 	-fx-border-width: 0;
 	-fx-padding: 0;
-	-fx-background-color: #333333;
+	-fx-background-color: #008000;
 }
 
 #consolePane .content .thumb {
-	-fx-background-color: #EEEEEEAA;
+	-fx-background-color: #B31A1AAA;
 }
 
 #consolePane .content .scroll-bar:vertical, #consolePane .content .corner {
-	-fx-background-color: #333333;
+	-fx-background-color: #008000;
 	-fx-pref-width: 14;
     -fx-padding: 3;
     -fx-border-width: 0;
-    -fx-border-color: #333333;
+    -fx-border-color: #008000;
 }
 
 #consolePane .content .scroll-bar:horizontal {
-	-fx-background-color: #333333;
+	-fx-background-color: #008000;
 	-fx-pref-height: 14;
 	-fx-padding: 3;
 	-fx-border-width: 0;
-	-fx-border-color: #333333;
+	-fx-border-color: #008000;
 }
 
  #consolePane .content .thumb:hover, #consolePane .content .thumb:pressed {
- 	-fx-background-color: #EEEEEE;
+ 	-fx-background-color: #B31A1A;
  }
 
 #HBox, #HBox * {
-	-fx-background-color: #222222;
-	-fx-fill: #cccccc;
+	-fx-background-color: #CCCC66;
+	-fx-fill: #CCCCCC;
 	-fx-border-width: 0;
 }
 
