--- a/src/main/resources/zenit/settingspanel/customcss/mainCustomTheme.css
+++ b/src/main/resources/zenit/settingspanel/customcss/mainCustomTheme.css
@@ -26,7 +26,7 @@
 }
 
 #btnClearConsole > *:hover {
-	-fx-fill: #666666;
+	-fx-fill: #996699;
 	-fx-cursor: hand;
 }
 
@@ -38,32 +38,32 @@
 }
 
 #menuBar, #menuBar * {
-	-fx-background-color: #333333;
-	-fx-text-fill: #FFFF80;
+	-fx-background-color: #FF8080;
+	-fx-text-fill: #8099FF;
 }
 
 #menuBar .arrow {
-	-fx-background-color: #FFFF80;
+	-fx-background-color: #8099FF;
 }
 
 .menu-item:hover, .menu-item:hover > * {
-	-fx-background-color: #666666 !important;
+	-fx-background-color: #996699 !important;
 }
 
 .menu {
-	-fx-fill: #FFFF80;
+	-fx-fill: #8099FF;
 }
 
 .menu:hover, .menu:hover > .label {
-	-fx-background-color: #666666 !important;
+	-fx-background-color: #996699 !important;
 }
 
 #cmiDarkMode:focused:checked > .left-container > .check {
-    -fx-background-color: #FFFF80;
+    -fx-background-color: #8099FF;
 }
 
 #cmiDarkMode:hover > .left-container {
-	-fx-background-color: #666666 !important;
+	-fx-background-color: #996699 !important;
 }
 
 #splitPane {
@@ -78,8 +78,8 @@
 }
 
 #tabPane {
-	-fx-background-color: #333333;
-	-fx-fill: #FFFF80;
+	-fx-background-color: #FF8080;
+	-fx-fill: #8099FF;
 	-fx-border-width: 0;
 	-fx-padding: 0;
 }
@@ -90,12 +90,12 @@
 }
 
 #treeView * {
-	-fx-background-color: #333333;
-	-fx-fill: #FFFF80aa;
+	-fx-background-color: #FF8080;
+	-fx-fill: #8099FFaa;
 }
 
 #treeView .arrow  {
-	-fx-background-color: #FFFF80bb;
+	-fx-background-color: #8099FFbb;
 }
 
 .split-pane:horizontal > .split-pane-divider {
@@ -155,7 +155,7 @@
 }
 
 #tabPane .tab-header-area .tab-header-background {
-	-fx-background-color: #333333;
+	-fx-background-color: #FF8080;
 }
 
 #tabPane * {
@@ -163,7 +163,7 @@
 }
 
 #tabPane .tab {
-	-fx-background-color: #33333388;
+	-fx-background-color: #FF808088;
 }
 
 #tabPane:focused > .tab-header-area > .headers-region > .tab:selected .focus-indicator {
@@ -171,39 +171,39 @@
 }
 
 #tabPane .tab .tab-label {
-	-fx-text-fill: #FFFF80;
+	-fx-text-fill: #8099FF;
 }
 
 #tabPane .tab:selected {
-	-fx-background-color: #333333;
+	-fx-background-color: #FF8080;
 }
 
 #tabPane .tab-content-area * {
-	-fx-background-color: #333333;
+	-fx-background-color: #FF8080;
 }
 
 #consolePane {
-	-fx-text-fill: #FFFF80;
+	-fx-text-fill: #8099FF;
 }
 
 #consolePane .title {
-	-fx-background-color: #333333;
-	-fx-text-fill: #FFFF80;
+	-fx-background-color: #FF8080;
+	-fx-text-fill: #8099FF;
 	-fx-border-radius: 0;
 }
 
 #consolePane .content {
-	-fx-background-color: #333333;
+	-fx-background-color: #FF8080;
 	-fx-border-width: 0;
-	-fx-border-color: #333333;
+	-fx-border-color: #FF8080;
 }
 
 #consolePane .content * {
-	-fx-text-fill: #FFFF80;
-	-fx-fill: #FFFF80;
+	-fx-text-fill: #8099FF;
+	-fx-fill: #8099FF;
 	-fx-border-width: 0;
 	-fx-padding: 0;
-	-fx-background-color: #333333;
+	-fx-background-color: #FF8080;
 }
 
 #consolePane .content .thumb {
@@ -211,19 +211,19 @@
 }
 
 #consolePane .content .scroll-bar:vertical, #consolePane .content .corner {
-	-fx-background-color: #333333;
+	-fx-background-color: #FF8080;
 	-fx-pref-width: 14;
     -fx-padding: 3;
     -fx-border-width: 0;
-    -fx-border-color: #333333;
+    -fx-border-color: #FF8080;
 }
 
 #consolePane .content .scroll-bar:horizontal {
-	-fx-background-color: #333333;
+	-fx-background-color: #FF8080;
 	-fx-pref-height: 14;
 	-fx-padding: 3;
 	-fx-border-width: 0;
-	-fx-border-color: #333333;
+	-fx-border-color: #FF8080;
 }
 
  #consolePane .content .thumb:hover, #consolePane .content .thumb:pressed {
