--- a/src/main/resources/zenit/settingspanel/customcss/settingspanelCustomTheme.css
+++ b/src/main/resources/zenit/settingspanel/customcss/settingspanelCustomTheme.css
@@ -3,38 +3,38 @@
 }
 
 #spAnchorPane {
-	-fx-background-color: #333333;
+	-fx-background-color: #000080;
 	-fx-padding: 0.0;
 	-fx-background-insets: 0.0, 0.0;
   	-fx-border-width: 0.0;
-  	-fx-background-color: #333333;
+  	-fx-background-color: #000080;
 }
 
 #spAnchorPane .button {
-	-fx-background-color: #666666;
-	-fx-text-fill: #FFFF80;
+	-fx-background-color: #FF0000;
+	-fx-text-fill: #1A4D4D;
 }
 
 #mainAnchorPane {
-	-fx-background-color: #333333;
+	-fx-background-color: #000080;
 		-fx-border-width: 0.0;
 }
 
 /* Text Appearance pane */
 #pnlTextAppearance {
-	-fx-background-color: #333333;
-	-fx-text-fill: #333333;
+	-fx-background-color: #000080;
+	-fx-text-fill: #99CC99;
 }
 
 #pnlTextAppearance .label {
-	-fx-text-fill: #666666;
+	-fx-text-fill: #1A4D4D;
 }
 
 #pnlTextAppearance #lblTxtAppeaSize {
-	-fx-text-fill: #FFFF80;
+	-fx-text-fill: #99CC99;
 }
 #pnlTextAppearance #lblTxtAppeaFont {
-	-fx-text-fill: #FFFF80;
+	-fx-text-fill: #99CC99;
 }
 
 #chcbxNewFont {
@@ -43,7 +43,7 @@
 }
 
 #chcbxNewFont .context-menu {	
-	-fx-background-color: #333333;
+	-fx-background-color: #000080;
 }
 
 #chcbxNewFont .menu-item:focused {
@@ -51,16 +51,16 @@
 }
 
 #chcbxNewFont .menu-item > .label {
-	-fx-text-fill: #666666;
+	-fx-text-fill: #1A4D4D;
 }
 
 #chcbxNewFont > .label {
-	-fx-text-fill: #666666;
+	-fx-text-fill: #1A4D4D;
 }
  
 #fldNewSize {
  	-fx-background-color: rgba(100,100,100,0.4);
- 	-fx-text-fill: #666666;
+ 	-fx-text-fill: #1A4D4D;
  }
  
 #sldrNewSize > .track {	
@@ -70,17 +70,17 @@
  
  /* Java Home pane */
 #pnlJavaHome {
-	-fx-background-color: #333333;
+	-fx-background-color: #000080;
 }
 
 #pnlJavaHome .label {
-	-fx-text-fill: #666666;
+	-fx-text-fill: #1A4D4D;
 }
 
 /* Theme pane */
 
 #pnlTheme {
-	-fx-background-color: #333333;
+	-fx-background-color: #000080;
 }
 
 #pnlTheme #lblDarkModeTxt {
@@ -106,38 +106,38 @@
 
 /* Custom CSS pane */
 #pnlCustomCSS {
-	-fx-background-color: #333333;
+	-fx-background-color: #000080;
 }
 #lblAddCustomCssLines {
-	-fx-text-fill: #666666;
+	-fx-text-fill: #1A4D4D;
 }
 #fldCustomCSSInput {
-	-fx-background-color: #333333;
+	-fx-background-color: #000080;
 	-fx-border-color: rgba(255,255,255,0.4);
 	-fx-text-fill: #009911;
 }
 
 #scrollPaneAddedCSS{
-	  -fx-background-color: #333333;
+	  -fx-background-color: #000080;
 	  -fx-border-color: transparent;
 }
 
 #listViewAddedCSS {
-	 -fx-background-color: #333333;
+	 -fx-background-color: #000080;
 	 -fx-border-color: transparent;
 }
 #listViewAddedCSS .list-cell { 
-	-fx-background-color: #333333; /* 5 */
-	-fx-text-fill: #666666;
+	-fx-background-color: #000080; /* 5 */
+	-fx-text-fill: #1A4D4D;
 	
 }
 
 #listViewAddedCSS .list-cell:even {
-	 -fx-background-color: #666666;
+	 -fx-background-color: #4D804D;
 }
 
 #scrollPaneAddedCSS .scroll-pane {
-    -fx-background-color: #333333;
+    -fx-background-color: #000080;
 }
 
 #scrollPaneAddedCSS .scroll-bar:vertical{
@@ -150,7 +150,7 @@
 }
 
 #scrollPaneAddedCSS .scroll-bar:vertical .thumb {
-    -fx-background-color: #666666;
+    -fx-background-color: #1A4D4D;
     -fx-background-radius: 5em;
 }
 
@@ -165,7 +165,7 @@
 }
 
 .lblCSSText {
-	-fx-text-fill: #666666;
+	-fx-text-fill: #1A4D4D;
 }
 
 #btnRemoveCSS {
@@ -183,8 +183,8 @@
 }
 
 #btnAddCSSLine {
-	-fx-background-color: #666666;
-	-fx-text-fill: #ffffff;
+	-fx-background-color: #4D804D;
+	-fx-text-fill: #1A4D1A;
 }
 
 /*
@@ -192,13 +192,10 @@
  * Customm Theme pane
  * 
  */
-#pnlCustomTheme {
-	-fx-background-color: #333333;
+ #pnlCustomTheme {
+	-fx-background-color: #000080;
 }
 
- #pnlCustomTheme .label {
-	-fx-text-fill: #FFFF80;
-}
  #pnlCustomTheme .color-picker {
  	-fx-background-color: transparent;
  	
@@ -206,24 +203,28 @@
  
  #pnlCustomTheme .color-picker .color-picker-label{
 
--fx-text-fill: #666666;
+-fx-text-fill: #1A4D4D;
+}
+
+.lblMainColor {
+	-fx-text-fill: #CCCCCC;
 }
  
  
 /* Support pane */
 #pnlSupport {
-	-fx-background-color: #333333;
+	-fx-background-color: #000080;
 }
 
 #pnlSupport .hyperlink {
-	-fx-text-fill: #666666;
+	-fx-text-fill: #1A4D4D;
 	-fx-border-color: transparent;
     -fx-padding: 4 0 4 0;
     -fx-underline: false;
 }
 
 #pnlSupport .hyperlink:hover {
-	-fx-text-fill: #FFFF80;
+	-fx-text-fill: #1A4D1A;
 }
 
 .paneHeader {
