--- a/src/main/resources/zenit/ui/Main.fxml
+++ b/src/main/resources/zenit/ui/Main.fxml
@@ -64,9 +64,9 @@
 						<MenuItem mnemonicParsing="false" text="Unselect All" />
 					</items>
 				</Menu>
-				<Menu mnemonicParsing="false" text="Help">
+				<Menu mnemonicParsing="false" text="View">
 					<items>
-						<MenuItem mnemonicParsing="false" text="About MyHelloApp" />
+						<MenuItem mnemonicParsing="false" text="Console/Terminal" onAction="#openConsoleComponent" />
 					</items>
 				</Menu>
 			</menus>
@@ -84,7 +84,7 @@
 							<content>
 								<AnchorPane id="Content" minHeight="-1.0" minWidth="-1.0">
 									<children>
-										<SplitPane dividerPositions="0.8" layoutY="-1.0" orientation="VERTICAL" prefHeight="527.0" prefWidth="669.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="-1.0">
+										<SplitPane fx:id="splitPane" dividerPositions="0.8" layoutY="-1.0" orientation="VERTICAL" prefHeight="527.0" prefWidth="669.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="-1.0">
 											<items>
 												<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0" SplitPane.resizableWithParent="false">
 													<children>
@@ -131,9 +131,9 @@
 														</HBox>
 													</children>
 												</AnchorPane>
-												<AnchorPane minHeight="0.0" prefHeight="269.0" prefWidth="667.0">
+												<AnchorPane fx:id="consoleRoot" prefHeight="269.0" prefWidth="667.0">
 													<children>
-														<AnchorPane fx:id="consolePane" prefHeight="269.0" prefWidth="667.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" >
+														<AnchorPane fx:id="consolePane" minHeight="34" prefHeight="269.0" prefWidth="667.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" >
 															<children>
 																<fx:include source="/zenit/console/ConsolePane.fxml" fx:id="console"></fx:include>
 															</children> 
